Fix padding of apresentation on mobile screen

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -35,10 +35,24 @@
   .main .lastPublications .card {
     width: 100%;
   }
+}
 
-  .main .lastPublications{
-    margin-top: 100px;
+@media(max-width: 575px){
+  .main {
+    padding-right: 10px;
+    padding-left: 10px;
   }
+}
+
+@media(max-width: 660px){
+  .main .apresentation {
+    padding-right: 10px;
+    padding-left: 10px;
+  }
+}
+
+.main .lastPublications{
+  margin-top: 100px;
 }
 
 .main .lastPublications .card .card-title {
